.metadata/.plugins/org.eclipse.cdt.ui/AXI_GPIO.build.log
08:22:16 **** Build of configuration Debug for project AXI_GPIO ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/axi_gpio.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -I../../AXI_GPIO_bsp/ps7_cortexa9_0/include -I"F:\0.zynq\PS_FPGA\5_AXI_GPIO\AXI_GPIO\AXI_GPIO.sdk\AXI_GPIO\src" -I"F:\0.zynq\PS_FPGA\5_AXI_GPIO\AXI_GPIO\AXI_GPIO.sdk\AXI_GPIO_bsp_2_bsp_0\ps7_cortexa9_0" -c -fmessage-length=0 -MT"src/axi_gpio.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -MMD -MP -MF"src/axi_gpio.d" -MT"src/axi_gpio.o" -o "src/axi_gpio.o" "../src/axi_gpio.c"
'Finished building: ../src/axi_gpio.c'
' '
'Building file: ../src/axi_uart.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -I../../AXI_GPIO_bsp/ps7_cortexa9_0/include -I"F:\0.zynq\PS_FPGA\5_AXI_GPIO\AXI_GPIO\AXI_GPIO.sdk\AXI_GPIO\src" -I"F:\0.zynq\PS_FPGA\5_AXI_GPIO\AXI_GPIO\AXI_GPIO.sdk\AXI_GPIO_bsp_2_bsp_0\ps7_cortexa9_0" -c -fmessage-length=0 -MT"src/axi_uart.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -MMD -MP -MF"src/axi_uart.d" -MT"src/axi_uart.o" -o "src/axi_uart.o" "../src/axi_uart.c"
In file included from ../../AXI_GPIO_bsp/ps7_cortexa9_0/include/xscugic.h:194:0,
                 from ../src/axi_uart.h:6,
                 from ../src/axi_uart.c:42:
../src/axi_uart.c: In function 'axi_uart_init':
../../AXI_GPIO_bsp/ps7_cortexa9_0/include/xstatus.h:61:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/axi_uart.c:70:10: note: in expansion of macro 'XST_FAILURE'
   return XST_FAILURE;
          ^~~~~~~~~~~
../src/axi_uart.c:66:6: note: declared here
 void axi_uart_init(){
      ^~~~~~~~~~~~~
In file included from ../../AXI_GPIO_bsp/ps7_cortexa9_0/include/xscugic.h:194:0,
                 from ../src/axi_uart.h:6,
                 from ../src/axi_uart.c:42:
../../AXI_GPIO_bsp/ps7_cortexa9_0/include/xstatus.h:61:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/axi_uart.c:74:10: note: in expansion of macro 'XST_FAILURE'
   return XST_FAILURE;
          ^~~~~~~~~~~
../src/axi_uart.c:66:6: note: declared here
 void axi_uart_init(){
      ^~~~~~~~~~~~~
In file included from ../src/axi_uart.c:42:0:
../src/axi_uart.h:18:21: error: 'XPAR_FABRIC_UARTLITE_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_INTC_0_UARTLITE_0_VEC_ID'?
 #define UART_INT_ID XPAR_FABRIC_UARTLITE_0_VEC_ID //PL¶Ë  AXI UARTÖÐ¶Ï
                     ^
../src/axi_uart.c:80:45: note: in expansion of macro 'UART_INT_ID'
     XScuGic_SetPriorityTriggerType(&scugic, UART_INT_ID, 0xA2, 0x03);
                                             ^~~~~~~~~~~
../src/axi_uart.h:18:21: note: each undeclared identifier is reported only once for each function it appears in
 #define UART_INT_ID XPAR_FABRIC_UARTLITE_0_VEC_ID //PL¶Ë  AXI UARTÖÐ¶Ï
                     ^
../src/axi_uart.c:80:45: note: in expansion of macro 'UART_INT_ID'
     XScuGic_SetPriorityTriggerType(&scugic, UART_INT_ID, 0xA2, 0x03);
                                             ^~~~~~~~~~~
../src/axi_uart.c: In function 'axi_uart_intr_handler':
../src/axi_uart.c:158:31: warning: pointer targets in passing argument 2 of 'XUartLite_Send' differ in signedness [-Wpointer-sign]
     XUartLite_Send(&UartLite, q, 5);
                               ^
In file included from ../src/axi_uart.h:11:0,
                 from ../src/axi_uart.c:42:
F:\0.zynq\PS_FPGA\5_AXI_GPIO\AXI_GPIO\AXI_GPIO.sdk\AXI_GPIO_bsp_2_bsp_0\ps7_cortexa9_0\include\xuartlite.h:252:14: note: expected 'u8 * {aka unsigned char *}' but argument is of type 'char *'
 unsigned int XUartLite_Send(XUartLite *InstancePtr, u8 *DataBufferPtr,
              ^~~~~~~~~~~~~~
../src/axi_uart.c: In function 'UartLiteSetupIntrSystem':
../src/axi_uart.c:182:11: warning: implicit declaration of function 'XIntc_Initialize'; did you mean 'XUartLite_Initialize'? [-Wimplicit-function-declaration]
  Status = XIntc_Initialize(IntcInstancePtr, INTC_DEVICE_ID);
           ^~~~~~~~~~~~~~~~
           XUartLite_Initialize
../src/axi_uart.c:193:11: warning: implicit declaration of function 'XIntc_Connect'; did you mean 'XScuGic_Connect'? [-Wimplicit-function-declaration]
  Status = XIntc_Connect(IntcInstancePtr, UartLiteIntrId,
           ^~~~~~~~~~~~~
           XScuGic_Connect
../src/axi_uart.c:206:11: warning: implicit declaration of function 'XIntc_Start' [-Wimplicit-function-declaration]
  Status = XIntc_Start(IntcInstancePtr, XIN_REAL_MODE);
           ^~~~~~~~~~~
../src/axi_uart.c:206:40: error: 'XIN_REAL_MODE' undeclared (first use in this function)
  Status = XIntc_Start(IntcInstancePtr, XIN_REAL_MODE);
                                        ^~~~~~~~~~~~~
../src/axi_uart.c:215:2: warning: implicit declaration of function 'XIntc_Enable'; did you mean 'XScuGic_Enable'? [-Wimplicit-function-declaration]
  XIntc_Enable(IntcInstancePtr, UartLiteIntrId);
  ^~~~~~~~~~~~
  XScuGic_Enable
make: *** [src/subdir.mk:32: src/axi_uart.o] Error 1

08:22:19 Build Finished (took 2s.289ms)

